--- a/.supabase/config.toml
+++ b/.supabase/config.toml
@@ -2,7 +2,7 @@
 # https://supabase.com/docs/guides/local-development/cli/config
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "applynext"
+project_id = "local"
 
 [api]
 enabled = true
@@ -107,9 +107,14 @@ file_size_limit = "50MiB"
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
 # in emails.
-site_url = "http://127.0.0.1:3000"
+site_url = "http://localhost:5173"
+
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://127.0.0.1:3000"]
+additional_redirect_urls = [
+  "http://localhost:5173/auth/callback",
+  "http://127.0.0.1:54321/auth/v1/callback"
+]
+
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # If disabled, the refresh token will never expire.
@@ -182,6 +187,14 @@ otp_expiry = 3600
 # [auth.email.template.invite]
 # subject = "You have been invited"
 # content_path = "./supabase/templates/invite.html"
+
+# Google Cloud Auth
+[auth.external.google]
+  enabled = true
+  client_id = "env(SUPABASE_AUTH_GOOGLE_CLIENT_ID)"
+  secret = "env(SUPABASE_AUTH_GOOGLE_CLIENT_SECRET)"
+  redirect_uri = "http://127.0.0.1:54321/auth/v1/callback"
+  skip_nonce_check = true
 
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
